# apicize

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  package.json  tsconfig.json  version.mjs
.github/workflows/: dispatch-demo.yml  dispatch-push.yml  main.yml  webhook-dispatch.yml
@apicize/cli/: --  Cargo.toml
@apicize/cli/src/: main.rs
@apicize/lib-rust/: Cargo.toml  README.md
@apicize/lib-rust/src/: apicize.rs  errors.rs  lib.rs  models.rs  oauth2_client_tokens.rs  parameters.rs  settings.rs  shared.rs  test_runner.rs  workbook.rs  workspace.rs
@apicize/lib-rust/src/models/: apicize.rs  settings.rs  shared.rs  workbook.rs  workspace.rs
@apicize/lib-rust/src/static/src/: index.js
@apicize/lib-typescript/: package.json  tsconfig.json
@apicize/lib-typescript/src/: index.ts
@apicize/lib-typescript/src/models/: apicize-settings.ts  application-settings.ts  authorization.ts  certificate.ts  executable.ts  execution-report-format.ts  execution-result-detail.ts  execution-result-success.ts  execution-result-summary.ts  execution-status.ts  execution.ts  external-data-entry.ts  indexed-entities.ts  indexed-nested-entities.ts  name-value-pair.ts  named.ts  persistence.ts  proxy.ts  request.ts  scenario.ts  selected-parameters.ts  validation-errors.ts  variable.ts  warnings.ts  workspace.ts
@apicize/lib-typescript/src/models/editing/: execution-result-detail.ts  execution-result-success.ts  execution-result-summary.ts
@apicize/lib-typescript/src/models/lib/: apicize-execution.ts
@apicize/lib-typescript/src/models/storage/: stored-global-settings.ts
@apicize/lib-typescript/src/models/workbook/: workbook-authorization.ts  workbook-defaults.ts  workbook-request.ts
@apicize/toolkit/: package.json  tsconfig.json
@apicize/toolkit/src/: .chai.d.ts.txt  index.ts  raw.d.ts  test-editor.d.ts  theme.ts  toolkit.css  window-size.tsx
@apicize/toolkit/src/contexts/: apicize-settings.context.tsx  apicize.context.tsx  clipboard.context.tsx  dragdrop.context.tsx  feedback.context.tsx  file-dragdrop.context.tsx  file-operations.context.tsx  log.context.tsx  pkce.context.tsx  workspace-session.context.tsx  workspace.context.tsx
@apicize/toolkit/src/controls/: bordered-section.tsx  editor-title.tsx  help.tsx  logo.tsx  main-panel.tsx  navigation.tsx  run-results-toolbar.tsx  run-toolbar.tsx
@apicize/toolkit/src/icons/: apicize-icon.tsx  auth-icon.tsx  certificate-icon.tsx  defaults-icon.tsx  folder-icon.tsx  index.ts  log-icon.tsx  notes.txt  private-icon.tsx  proxy-icon.tsx  public-icon.tsx  request-icon.tsx  scenario-icon.tsx  seed-icon.tsx  vault-icon.tsx  view-icon.tsx  workkbook-icon.tsx
@apicize/toolkit/src/models/: drag-drop.ts  editable-settings.ts  editable.ts  editor-mode.ts  execution-report.ts  help-contents.ts  indexed-entity-manager.ts  menu-position.ts  navigation.ts  settings.ts  trace.ts
@apicize/toolkit/src/services/: apicize-serializer.ts  base64.ts
@apicize/toolkit/typings/: bdd  chai
apicize/cli/: Cargo.toml
apicize/cli/src/: main.rs
apicize/lib-rust/: Cargo.toml
apicize/lib-rust/src/: lib.rs  models.rs  test_runner.rs
apicize/lib-rust/src/models/: settings.rs  utility.rs  workspace.rs
apicize/lib-rust/src/static/: routines.js
apicize/lib-typescript/: package.json
apicize/lib-typescript/src/: index.ts
apicize/toolkit/: package.json
apicize/toolkit/src/: index.ts  toolkit.css
apicize/toolkit/src/contexts/: file-operations.context.tsx
apicize/toolkit/src/controls/: help.tsx  run-toolbar.tsx
app/: env.config.js  index.html  package.json  tsconfig.json  vite.config.ts  webpack.config.development.js  webpack.config.production.js
app/src/: globals.css  index.html  layout.tsx  page.tsx
app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
app/src-tauri/capabilities/: migrated.json
app/src-tauri/help/: about.md  authoring-tests.md  authorizations.md  certificates.md  contents.json  defaults-and-settings.md  demo.apicize  groups.md  home.md  logs.md  parameter-storage.md  proxies.md  requests.md  running-tests.md  scenarios.md  settings.md  testing.md
app/src-tauri/help/authorization/: api-key.md  basic.md  oauth2-client.md  oauth2-pkce.md
app/src-tauri/help/demo/: demo.apicize
app/src-tauri/help/demo/data/: test.json
app/src-tauri/help/requests/: body.md  headers.md  info.md  parameters.md  query.md  test.md
app/src-tauri/help/settings/: display.md  parameters.md
app/src-tauri/help/workspace/: authorizations.md  certificates.md  defaults.md  groups.md  proxies.md  requests.md  scenarios.md
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: dragdrop.rs  error.rs  main.rs  pkce.rs  sessions.rs  settings.rs  trace.rs  workspaces.rs
app/src/controls/: configurable-theme.tsx  confirmation-dialog.tsx  modal-block..tsx  settings-dialog.tsx  toast.tsx
app/src/providers/: apicize-settings.provider.tsx  apicize.provider.tsx  clipboard.provider.tsx  feedback.provider.tsx  file-dragdrop.provider.tsx  file-operations.provider.tsx  log.provider.tsx  pkce.provider.tsx  workspace.provider.tsx
(+94 files in other folders)
