[package]
name = "apicize-run"
version = "0.6.1"
description = "Apicize CLI test runner"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apicize_lib = { path = "../lib-rust", version = "^0.6.1" }
clap = { version = "4.5.18", features = ["derive"] }
colored = "2.1.0"
num-format = { version = "0.4.4", features = ["with-system-locale"] }
serde = "1.0.210"
serde_json = "1.0.110"
tokio = "1.35.1"

[target.x86_64-unknown-linux-musl.dependencies]
openssl = { version = "*", features = ["vendored"] }
